WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145253
[GTK] Layout Test http/tests/appcache/different-https-origin-resource-main.html is failing
https://bugs.webkit.org/show_bug.cgi?id=145253
Summary
[GTK] Layout Test http/tests/appcache/different-https-origin-resource-main.ht...
Marcos Chavarría Teijeiro (irc: chavaone)
Reported
2015-05-21 03:06:28 PDT
The http/tests/appcache/different-https-origin-resource-main.html layout test is failing on GTK+. It was expected to crash but it is failing after r[
r184624
-
r184632
]. The diff is the following: --- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/http/tests/appcache/different-https-origin-resource-main-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/http/tests/appcache/different-https-origin-resource-main-actual.txt @@ -1,4 +1,4 @@ Test that a resource from a different https origin is not cached. -PASS +ERROR If I try to print the error information I get an empty object.
Attachments
GDB Backtrace for the crash of http/tests/appcache/different-https-origin-resource-main.html on a GTKDebug build of r195954
(17.58 KB, text/plain)
2016-02-01 14:39 PST
,
Carlos Alberto Lopez Perez
no flags
Details
Patch
(1.93 KB, patch)
2016-02-02 08:34 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2016-02-01 14:39:13 PST
Created
attachment 270428
[details]
GDB Backtrace for the crash of http/tests/appcache/different-https-origin-resource-main.html on a GTKDebug build of
r195954
Carlos Alberto Lopez Perez
Comment 2
2016-02-01 14:42:00 PST
I have observed the following: If the full test suite is run, this tests usually fails. But if this tests is run alone by specifying its name on the command line it crashes. I'm attaching the GDB backtrace for when it crashes.
Carlos Garcia Campos
Comment 3
2016-02-02 08:34:59 PST
Created
attachment 270489
[details]
Patch There's a use after free when handling tls errors.
Michael Catanzaro
Comment 4
2016-02-02 10:36:28 PST
Comment on
attachment 270489
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=270489&action=review
Thanks Carlos and Carlos. Yet another concrete result to show from our gardening.
> Source/WebCore/ChangeLog:3 > + [GTK] Layout Test http/tests/appcache/different-https-origin-resource-main.html is failing
Also remove the failure expectation?
Carlos Alberto Lopez Perez
Comment 5
2016-02-02 10:48:25 PST
(In reply to
comment #4
)
> > Also remove the failure expectation?
It continues to fail. This patch fixed the crash, but not the test. So I guess that removing the Crash from the expectation and leaving the Failure is the right thing to do.
Carlos Garcia Campos
Comment 6
2016-02-03 02:37:28 PST
Committed
r196061
: <
http://trac.webkit.org/changeset/196061
>
Michael Catanzaro
Comment 7
2016-02-03 07:49:13 PST
Reopening because the test is still failing and the expectation is still marked against this bug. Glad we got the crash fixed though.
Michael Catanzaro
Comment 8
2018-02-27 15:36:07 PST
Fixed by
r228892
.
Radar WebKit Bug Importer
Comment 9
2018-02-27 15:37:31 PST
<
rdar://problem/37959838
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug