Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp
@@ -338,11 +338,11 @@ static bool handleUnignoredTLSErrors(ResourceHandle* handle, SoupMessage* messag
 
 static void tlsErrorsChangedCallback(SoupMessage* message, GParamSpec*, gpointer data)
 {
-    ResourceHandle* handle = static_cast<ResourceHandle*>(data);
+    RefPtr<ResourceHandle> handle = static_cast<ResourceHandle*>(data);
     if (!handle || handle->cancelledOrClientless())
         return;
 
-    if (handleUnignoredTLSErrors(handle, message))
+    if (handleUnignoredTLSErrors(handle.get(), message))
         handle->cancel();
 }
 
